--- a/project.srcs/sources_1/bd/top_level/ui/bd_39d0265a.ui
+++ b/project.srcs/sources_1/bd/top_level/ui/bd_39d0265a.ui
@@ -2,73 +2,76 @@
    "ActiveEmotionalView":"No Loops",
    "Default View_ScaleFactor":"1.0",
    "Default View_TopLeft":"-554,-570",
+   "Display-PortTypeReset":"true",
    "DisplayTieOff":"1",
    "ExpandedHierarchyInLayout":"",
    "No Loops_ExpandedHierarchyInLayout":"",
+   "No Loops_Layers":"/source_100mhz/system_reset_peripheral_aresetn:true|/ext_reset_in_0_1:true|",
    "No Loops_Layout":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port UART -pg 1 -lvl 0 -x 0 -y 270 -defaultsOSRD -left
-preplace port port-id_CLK100MHZ -pg 1 -lvl 0 -x 0 -y 330 -defaultsOSRD
-preplace port port-id_CPU_RESETN -pg 1 -lvl 0 -x 0 -y 350 -defaultsOSRD
-preplace portBus LED -pg 1 -lvl 9 -x 2480 -y 440 -defaultsOSRD
-preplace portBus SW -pg 1 -lvl 9 -x 2480 -y 60 -defaultsOSRD -right
-preplace portBus AN -pg 1 -lvl 9 -x 2480 -y 320 -defaultsOSRD
-preplace portBus SEG -pg 1 -lvl 9 -x 2480 -y 340 -defaultsOSRD
-preplace inst source_100mhz -pg 1 -lvl 1 -x 140 -y 330 -defaultsOSRD -pinDir clk_in left -pinY clk_in 0L -pinDir resetn_in left -pinY resetn_in 20L -pinDir sys_clk right -pinY sys_clk 0R -pinBusDir sys_resetn right -pinBusY sys_resetn 20R
-preplace inst uart_axi_bridge -pg 1 -lvl 2 -x 400 -y 270 -defaultsOSRD -pinDir UART left -pinY UART 0L -pinDir M_AXI right -pinY M_AXI 40R -pinDir s_axi_aclk left -pinY s_axi_aclk 20L -pinDir s_axi_aresetn left -pinY s_axi_aresetn 40L
-preplace inst system_interconnect -pg 1 -lvl 3 -x 680 -y 240 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 40 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 20 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61} -defaultsOSRD -pinDir S00_AXI left -pinY S00_AXI 70L -pinDir M00_AXI right -pinY M00_AXI 140R -pinDir M01_AXI right -pinY M01_AXI 0R -pinDir aclk left -pinY aclk 120L -pinDir aresetn left -pinY aresetn 140L
-preplace inst system_ila -pg 1 -lvl 7 -x 1970 -y 600 -swap {0 2 3 4 1} -defaultsOSRD -pinDir clk left -pinY clk 0L -pinBusDir probe0 left -pinBusY probe0 40L -pinBusDir probe1 left -pinBusY probe1 60L -pinBusDir probe2 left -pinBusY probe2 80L -pinBusDir probe3 left -pinBusY probe3 20L
-preplace inst sevenseg_driver -pg 1 -lvl 8 -x 2300 -y 320 -swap {3 2 0 1 4 5} -defaultsOSRD -pinDir clk left -pinY clk 60L -pinDir resetn left -pinY resetn 40L -pinBusDir display left -pinBusY display 0L -pinBusDir digit_enable left -pinBusY digit_enable 20L -pinBusDir ANODE right -pinBusY ANODE 0R -pinBusDir CATHODE right -pinBusY CATHODE 20R
-preplace inst display_shim -pg 1 -lvl 7 -x 1970 -y 60 -defaultsOSRD -pinDir clk left -pinY clk 0L -pinBusDir dac_a left -pinBusY dac_a 20L -pinBusDir dac_b left -pinBusY dac_b 40L -pinBusDir dac_c left -pinBusY dac_c 60L -pinBusDir dac_d left -pinBusY dac_d 80L -pinBusDir dac_e left -pinBusY dac_e 100L -pinBusDir dac_f left -pinBusY dac_f 120L -pinBusDir dac_g left -pinBusY dac_g 140L -pinBusDir dac_h left -pinBusY dac_h 160L -pinBusDir inp_a left -pinBusY inp_a 180L -pinBusDir inp_b left -pinBusY inp_b 200L -pinBusDir inp_c left -pinBusY inp_c 220L -pinBusDir inp_d left -pinBusY inp_d 240L -pinBusDir inp_e left -pinBusY inp_e 260L -pinBusDir inp_f left -pinBusY inp_f 280L -pinBusDir inp_g left -pinBusY inp_g 300L -pinBusDir inp_h left -pinBusY inp_h 320L -pinBusDir ch_select right -pinBusY ch_select 0R -pinBusDir display right -pinBusY display 260R -pinBusDir digit_enable right -pinBusY digit_enable 280R
-preplace inst axi_dac_control -pg 1 -lvl 4 -x 980 -y 200 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 26 22 24 23 25} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 40L -pinDir clk left -pinY clk 60L -pinDir resetn left -pinY resetn 80L -pinBusDir dac_cmd right -pinBusY dac_cmd 80R -pinBusDir dac_channel right -pinBusY dac_channel 0R -pinBusDir dac_value right -pinBusY dac_value 40R -pinDir dac_start right -pinY dac_start 20R -pinDir dac_ldac right -pinY dac_ldac 60R
-preplace inst ltc_2656 -pg 1 -lvl 5 -x 1280 -y 160 -swap {0 1 10 2 4 6 7 9 8 5 3} -defaultsOSRD -pinDir clk left -pinY clk 0L -pinDir resetn left -pinY resetn 20L -pinBusDir dac_cmd left -pinBusY dac_cmd 120L -pinBusDir dac_channel left -pinBusY dac_channel 40L -pinBusDir dac_value left -pinBusY dac_value 80L -pinDir sck right -pinY sck 260R -pinDir sdo right -pinY sdo 280R -pinDir csld right -pinY csld 300R -pinDir ldac_in left -pinY ldac_in 100L -pinDir ldac_out right -pinY ldac_out 0R -pinDir start left -pinY start 60L
-preplace inst sim_ltc_2656 -pg 1 -lvl 6 -x 1640 -y 80 -swap {0 1 3 4 5 2 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23} -defaultsOSRD -pinDir clk left -pinY clk 0L -pinDir resetn left -pinY resetn 20L -pinDir sck left -pinY sck 340L -pinDir sdi left -pinY sdi 360L -pinDir csld left -pinY csld 380L -pinDir ldac left -pinY ldac 80L -pinBusDir dac_a right -pinBusY dac_a 0R -pinBusDir dac_b right -pinBusY dac_b 20R -pinBusDir dac_c right -pinBusY dac_c 40R -pinBusDir dac_d right -pinBusY dac_d 60R -pinBusDir dac_e right -pinBusY dac_e 80R -pinBusDir dac_f right -pinBusY dac_f 100R -pinBusDir dac_g right -pinBusY dac_g 120R -pinBusDir dac_h right -pinBusY dac_h 140R -pinBusDir inp_a right -pinBusY inp_a 160R -pinBusDir inp_b right -pinBusY inp_b 180R -pinBusDir inp_c right -pinBusY inp_c 200R -pinBusDir inp_d right -pinBusY inp_d 220R -pinBusDir inp_e right -pinBusY inp_e 240R -pinBusDir inp_f right -pinBusY inp_f 260R -pinBusDir inp_g right -pinBusY inp_g 280R -pinBusDir inp_h right -pinBusY inp_h 300R -pinBusDir powered right -pinBusY powered 360R -pinBusDir spi_dataword_out right -pinBusY spi_dataword_out 380R
-preplace inst axi_revision -pg 1 -lvl 4 -x 980 -y 380 -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir AXI_ACLK left -pinY AXI_ACLK 20L -pinDir AXI_ARESETN left -pinY AXI_ARESETN 40L
-preplace netloc clk_in1_0_1 1 0 1 NJ 330
-preplace netloc ext_reset_in_0_1 1 0 1 NJ 350
-preplace netloc source_100mhz_sys_clk 1 1 7 280 360 540 440 820 120 1120 80 1480 20 1820 540 2140
-preplace netloc source_100mhz_sys_resetn 1 1 7 260 380 520 460 840 140 1140 100 1480 520 NJ 520 2120
-preplace netloc ltc_2656_sck 1 5 2 1460 660 NJ
-preplace netloc ltc_2656_csld 1 5 2 1440 640 NJ
-preplace netloc ltc_2656_sdo 1 5 2 1420 680 NJ
-preplace netloc axi_dac_control_dac_cmd 1 4 1 N 280
-preplace netloc axi_dac_control_dac_channel 1 4 1 N 200
-preplace netloc axi_dac_control_dac_value 1 4 1 N 240
-preplace netloc axi_dac_control_dac_start 1 4 1 N 220
-preplace netloc sim_ltc_2656_spi_dataword_out 1 6 1 1800 460n
-preplace netloc sim_ltc_2656_powered 1 6 3 NJ 440 NJ 440 NJ
-preplace netloc sim_ltc_2656_dac_a 1 6 1 N 80
-preplace netloc sim_ltc_2656_dac_b 1 6 1 N 100
-preplace netloc sim_ltc_2656_dac_c 1 6 1 N 120
-preplace netloc sim_ltc_2656_dac_d 1 6 1 N 140
-preplace netloc sim_ltc_2656_dac_e 1 6 1 N 160
-preplace netloc sim_ltc_2656_dac_f 1 6 1 N 180
-preplace netloc sim_ltc_2656_dac_g 1 6 1 N 200
-preplace netloc sim_ltc_2656_dac_h 1 6 1 N 220
-preplace netloc sim_ltc_2656_inp_a 1 6 1 N 240
-preplace netloc sim_ltc_2656_inp_b 1 6 1 N 260
-preplace netloc sim_ltc_2656_inp_c 1 6 1 N 280
-preplace netloc sim_ltc_2656_inp_d 1 6 1 N 300
-preplace netloc sim_ltc_2656_inp_e 1 6 1 N 320
-preplace netloc sim_ltc_2656_inp_f 1 6 1 N 340
-preplace netloc sim_ltc_2656_inp_g 1 6 1 N 360
-preplace netloc sim_ltc_2656_inp_h 1 6 1 N 380
-preplace netloc ch_select_0_1 1 7 2 NJ 60 NJ
-preplace netloc display_shim_display 1 7 1 N 320
-preplace netloc display_shim_digit_enable 1 7 1 N 340
-preplace netloc sevenseg_driver_ANODE 1 8 1 NJ 320
-preplace netloc sevenseg_driver_CATHODE 1 8 1 NJ 340
-preplace netloc ltc_2656_ldac_out 1 5 1 N 160
-preplace netloc axi_dac_control_dac_ldac 1 4 1 N 260
-preplace netloc axi_uartlite_UART 1 0 2 NJ 270 NJ
-preplace netloc system_interconnect_M00_AXI 1 3 1 N 380
-preplace netloc uart_axi_bridge_M_AXI 1 2 1 N 310
-preplace netloc system_interconnect_M01_AXI 1 3 1 N 240
-levelinfo -pg 1 0 140 400 680 980 1280 1640 1970 2300 2480
-pagesize -pg 1 -db -bbox -sgen -150 0 2600 740
+preplace port UART -pg 1 -lvl 0 -x 0 -y 600 -defaultsOSRD -left
+preplace port port-id_CLK100MHZ -pg 1 -lvl 0 -x 0 -y 660 -defaultsOSRD
+preplace port port-id_CPU_RESETN -pg 1 -lvl 0 -x 0 -y 680 -defaultsOSRD
+preplace port port-id_LED16_B -pg 1 -lvl 8 -x 2120 -y 490 -defaultsOSRD
+preplace portBus LED -pg 1 -lvl 8 -x 2120 -y 510 -defaultsOSRD
+preplace portBus SW -pg 1 -lvl 8 -x 2120 -y 60 -defaultsOSRD -right
+preplace portBus AN -pg 1 -lvl 8 -x 2120 -y 80 -defaultsOSRD
+preplace portBus SEG -pg 1 -lvl 8 -x 2120 -y 100 -defaultsOSRD
+preplace inst source_100mhz -pg 1 -lvl 1 -x 140 -y 660 -defaultsOSRD -pinDir clk_in left -pinY clk_in 0L -pinDir resetn_in left -pinY resetn_in 20L -pinDir sys_clk right -pinY sys_clk 0R -pinBusDir sys_resetn right -pinBusY sys_resetn 20R
+preplace inst uart_axi_bridge -pg 1 -lvl 2 -x 400 -y 600 -defaultsOSRD -pinDir UART left -pinY UART 0L -pinDir M_AXI right -pinY M_AXI 0R -pinDir s_axi_aclk left -pinY s_axi_aclk 20L -pinDir s_axi_aresetn left -pinY s_axi_aresetn 40L
+preplace inst system_interconnect -pg 1 -lvl 3 -x 680 -y 530 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 40 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 20 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61} -defaultsOSRD -pinDir S00_AXI left -pinY S00_AXI 70L -pinDir M00_AXI right -pinY M00_AXI 180R -pinDir M01_AXI right -pinY M01_AXI 0R -pinDir aclk left -pinY aclk 160L -pinDir aresetn left -pinY aresetn 180L
+preplace inst system_ila -pg 1 -lvl 6 -x 1720 -y 610 -swap {6 2 0 1 5 4 3} -defaultsOSRD -pinDir clk left -pinY clk 120L -pinBusDir probe0 left -pinBusY probe0 40L -pinBusDir probe1 left -pinBusY probe1 0L -pinBusDir probe2 left -pinBusY probe2 20L -pinBusDir probe3 left -pinBusY probe3 100L -pinBusDir probe4 left -pinBusY probe4 80L -pinBusDir probe5 left -pinBusY probe5 60L
+preplace inst axi_dac_control -pg 1 -lvl 4 -x 980 -y 470 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 27 25 26} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 60L -pinDir clk left -pinY clk 80L -pinDir resetn left -pinY resetn 100L -pinBusDir dac_cmd right -pinBusY dac_cmd 0R -pinBusDir dac_channel right -pinBusY dac_channel 20R -pinBusDir dac_value right -pinBusY dac_value 40R -pinDir dac_start right -pinY dac_start 100R -pinDir dac_ldac right -pinY dac_ldac 60R -pinDir dac_clr right -pinY dac_clr 80R
+preplace inst ltc_2656 -pg 1 -lvl 5 -x 1280 -y 470 -swap {11 13 12 0 1 3 2 6 7 4 8 5 10 9} -defaultsOSRD -pinDir clk left -pinY clk 160L -pinDir resetn left -pinY resetn 180L -pinDir idle right -pinY idle 180R -pinBusDir dac_cmd left -pinBusY dac_cmd 0L -pinBusDir dac_channel left -pinBusY dac_channel 20L -pinBusDir dac_value left -pinBusY dac_value 40L -pinDir sck right -pinY sck 0R -pinDir sdo right -pinY sdo 20R -pinDir csld right -pinY csld 40R -pinDir ldac_in left -pinY ldac_in 60L -pinDir ldac_out right -pinY ldac_out 60R -pinDir clr_in left -pinY clr_in 80L -pinDir clr_out right -pinY clr_out 80R -pinDir start left -pinY start 100L
+preplace inst sim_ltc_2656 -pg 1 -lvl 6 -x 1720 -y 120 -swap {6 5 0 1 2 3 4 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 25 24 23} -defaultsOSRD -pinDir clk left -pinY clk 390L -pinDir resetn left -pinY resetn 370L -pinDir sck left -pinY sck 270L -pinDir sdi left -pinY sdi 290L -pinDir csld left -pinY csld 310L -pinDir ldac left -pinY ldac 330L -pinDir clr left -pinY clr 350L -pinBusDir dac_a right -pinBusY dac_a 0R -pinBusDir dac_b right -pinBusY dac_b 20R -pinBusDir dac_c right -pinBusY dac_c 40R -pinBusDir dac_d right -pinBusY dac_d 60R -pinBusDir dac_e right -pinBusY dac_e 80R -pinBusDir dac_f right -pinBusY dac_f 100R -pinBusDir dac_g right -pinBusY dac_g 120R -pinBusDir dac_h right -pinBusY dac_h 140R -pinBusDir inp_a right -pinBusY inp_a 160R -pinBusDir inp_b right -pinBusY inp_b 180R -pinBusDir inp_c right -pinBusY inp_c 200R -pinBusDir inp_d right -pinBusY inp_d 220R -pinBusDir inp_e right -pinBusY inp_e 240R -pinBusDir inp_f right -pinBusY inp_f 260R -pinBusDir inp_g right -pinBusY inp_g 280R -pinBusDir inp_h right -pinBusY inp_h 300R -pinBusDir powered right -pinBusY powered 390R -pinDir internal_vref right -pinY internal_vref 370R -pinBusDir spi_dataword_out right -pinBusY spi_dataword_out 320R
+preplace inst axi_revision -pg 1 -lvl 4 -x 980 -y 710 -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir AXI_ACLK left -pinY AXI_ACLK 20L -pinDir AXI_ARESETN left -pinY AXI_ARESETN 40L
+preplace inst display -pg 1 -lvl 7 -x 1990 -y 60 -defaultsOSRD -pinDir clk left -pinY clk 0L -pinBusDir dac_a left -pinBusY dac_a 60L -pinBusDir dac_b left -pinBusY dac_b 80L -pinBusDir dac_c left -pinBusY dac_c 100L -pinBusDir dac_d left -pinBusY dac_d 120L -pinBusDir dac_e left -pinBusY dac_e 140L -pinBusDir dac_f left -pinBusY dac_f 160L -pinBusDir dac_g left -pinBusY dac_g 180L -pinBusDir dac_h left -pinBusY dac_h 200L -pinBusDir inp_a left -pinBusY inp_a 220L -pinBusDir inp_b left -pinBusY inp_b 240L -pinBusDir inp_c left -pinBusY inp_c 260L -pinBusDir inp_d left -pinBusY inp_d 280L -pinBusDir inp_e left -pinBusY inp_e 300L -pinBusDir inp_f left -pinBusY inp_f 320L -pinBusDir inp_g left -pinBusY inp_g 340L -pinBusDir inp_h left -pinBusY inp_h 360L -pinBusDir SW right -pinBusY SW 0R -pinDir resetn left -pinY resetn 380L -pinBusDir AN right -pinBusY AN 20R -pinBusDir SEG right -pinBusY SEG 40R
+preplace netloc axi_dac_control_dac_channel 1 4 1 N 490
+preplace netloc axi_dac_control_dac_cmd 1 4 1 N 470
+preplace netloc axi_dac_control_dac_ldac 1 4 1 N 530
+preplace netloc axi_dac_control_dac_start 1 4 1 N 570
+preplace netloc axi_dac_control_dac_value 1 4 1 N 510
+preplace netloc ch_select_0_1 1 7 1 NJ 60
+preplace netloc clk_in1_0_1 1 0 1 NJ 660
+preplace netloc ext_reset_in_0_1 1 0 1 NJ 680
+preplace netloc ltc_2656_csld 1 5 1 1480 430n
+preplace netloc ltc_2656_ldac_out 1 5 1 1540 450n
+preplace netloc ltc_2656_sck 1 5 1 1520 390n
+preplace netloc ltc_2656_sdo 1 5 1 1420 410n
+preplace netloc sevenseg_driver_ANODE 1 7 1 NJ 80
+preplace netloc sevenseg_driver_CATHODE 1 7 1 NJ 100
+preplace netloc sim_ltc_2656_dac_a 1 6 1 N 120
+preplace netloc sim_ltc_2656_dac_b 1 6 1 N 140
+preplace netloc sim_ltc_2656_dac_c 1 6 1 N 160
+preplace netloc sim_ltc_2656_dac_d 1 6 1 N 180
+preplace netloc sim_ltc_2656_dac_e 1 6 1 N 200
+preplace netloc sim_ltc_2656_dac_f 1 6 1 N 220
+preplace netloc sim_ltc_2656_dac_g 1 6 1 N 240
+preplace netloc sim_ltc_2656_dac_h 1 6 1 N 260
+preplace netloc sim_ltc_2656_inp_a 1 6 1 N 280
+preplace netloc sim_ltc_2656_inp_b 1 6 1 N 300
+preplace netloc sim_ltc_2656_inp_c 1 6 1 N 320
+preplace netloc sim_ltc_2656_inp_d 1 6 1 N 340
+preplace netloc sim_ltc_2656_inp_e 1 6 1 N 360
+preplace netloc sim_ltc_2656_inp_f 1 6 1 N 380
+preplace netloc sim_ltc_2656_inp_g 1 6 1 N 400
+preplace netloc sim_ltc_2656_inp_h 1 6 1 N 420
+preplace netloc sim_ltc_2656_powered 1 6 2 NJ 510 NJ
+preplace netloc source_100mhz_sys_clk 1 1 6 280 690 540 770 820 630 1140 730 1500 60 N
+preplace netloc source_100mhz_sys_resetn 1 1 6 260 710 520 790 840 650 1120 710 1440 790 1880J
+preplace netloc ltc_2656_clr_out 1 5 1 1560 470n
+preplace netloc axi_dac_control_dac_clr 1 4 1 N 550
+preplace netloc ltc_2656_idle 1 5 1 1460 650n
+preplace netloc sim_ltc_2656_internal_vref 1 6 2 NJ 490 NJ
+preplace netloc axi_uartlite_UART 1 0 2 NJ 600 NJ
+preplace netloc system_interconnect_M00_AXI 1 3 1 N 710
+preplace netloc system_interconnect_M01_AXI 1 3 1 N 530
+preplace netloc uart_axi_bridge_M_AXI 1 2 1 N 600
+levelinfo -pg 1 0 140 400 680 980 1280 1720 1990 2120
+pagesize -pg 1 -db -bbox -sgen -150 0 2240 810
 ",
-   "No Loops_ScaleFactor":"0.572787",
-   "No Loops_TopLeft":"-141,-260",
+   "No Loops_ScaleFactor":"0.659646",
+   "No Loops_TopLeft":"-143,-162",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
 preplace port port-id_CLK100MHZ -pg 1 -lvl 0 -x -10 -y -200 -defaultsOSRD
